[package]
name = "not-golang-tech-task"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = "1"
serde_json = "1.0"

diesel = { version = "1.0.0", features = ["postgres"] }
