[package]
name = "not-golang-tech-task"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = "1"
serde_json = "1.0"

diesel = { version = "1.0.0", features = ["postgres"] }
env_logger = "0.8.2"

tracing = "0.1.22"
tracing-log = "0.1.1"
tracing-actix-web = "0.2"
tracing-bunyan-formatter = "0.1.7"
tracing-subscriber = "0.2.15"

